@@ -1,0 +1,8 @@
+void btree_init(void);
+
+void btree_add_child(short parent, short child);
+
+void btree_add_symbol(struct symbol *s);
+
+void btree_alloc(void);
+
