@@ -787,7 +787,7 @@ newiTempOperand (sym_link * type, char throwType)
   op->svt.symOperand = itmp;
   op->key = itmp->key = ++operandKey;
   
-printf("New iTempOp %s / %d created.\n spillLoc %d\n", itmp->name, itmp->key, (int)(itmp->usl.spillLoc));
+//printf("New iTempOp %s / %d created.\n spillLoc %d\n", itmp->name, itmp->key, (int)(itmp->usl.spillLoc));
 
   return op;
 }
@@ -1562,7 +1562,7 @@ operandFromSymbol (symbol * sym)
       op->type = SYMBOL;
       op->svt.symOperand = sym;
       op->key = sym->key;
-printf("1Overwriting key by %d\n", (int)(sym->key));
+//printf("1Overwriting key by %d\n", (int)(sym->key));
       op->isvolatile = isOperandVolatile (op, TRUE);
       op->isGlobal = isOperandGlobal (op);
       return op;
@@ -1591,14 +1591,14 @@ printf("1Overwriting key by %d\n", (int)(sym->key));
          and before liveRange calculation */
       sym->reqv = newiTempOperand (sym->type, 0);
       sym->reqv->key = sym->key;
-printf("2Overwriting key by %d\n", (int)(sym->key));
+//printf("2Overwriting key by %d\n", (int)(sym->key));
       OP_SYMBOL (sym->reqv)->prereqv = sym;
       OP_SYMBOL (sym->reqv)->key = sym->key;
       OP_SYMBOL (sym->reqv)->isreqv = 1;
       OP_SYMBOL (sym->reqv)->islocal = 1;
       OP_SYMBOL (sym->reqv)->onStack = sym->onStack;
       SPIL_LOC (sym->reqv) = sym;
-printf("1Using %s as spilloc for %s\n", sym->name, OP_SYMBOL(sym->reqv)->name);
+//printf("1Using %s as spilloc for %s\n", sym->name, OP_SYMBOL(sym->reqv)->name);
     }
 
   if (!IS_AGGREGATE (sym->type))
@@ -1608,7 +1608,7 @@ printf("1Using %s as spilloc for %s\n", sym->name, OP_SYMBOL(sym->reqv)->name);
       op->svt.symOperand = sym;
       op->isaddr = 1;
       op->key = sym->key;
-printf("3Overwriting key by %d\n", (int)(sym->key));
+//printf("3Overwriting key by %d\n", (int)(sym->key));
       op->isvolatile = isOperandVolatile (op, TRUE);
       op->isGlobal = isOperandGlobal (op);
       op->isPtr = IS_PTR (operandType (op));
@@ -3453,7 +3453,7 @@ geniCodeReceive (value * args, operand * func)
                   OP_SYMBOL (sym->reqv)->isreqv = 1;
                   OP_SYMBOL (sym->reqv)->islocal = 0;
                   SPIL_LOC (sym->reqv) = sym;
-                  printf("2Using %s as spilloc for %s\n", sym->name, OP_SYMBOL(sym->reqv)->name);
+//printf("2Using %s as spilloc for %s\n", sym->name, OP_SYMBOL(sym->reqv)->name);
                 }
             }
 
