@@ -1,5 +1,17 @@
 2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/Makefile.in,
+	  src/SDCC.y,
+	  src/SDCCralloc.hpp,
+	  src/SDCCbtree.h,
+	  src/SDCCbtree.cc,
+	  src/SDCCicode.c,
+	  src/SDCCmem.c,
+	  src/SDCCast.c:
+	  Block-tree based stack allocator.
+
+2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* Merge from trunk.
 
 2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
